Version 1.0.2
-------------

This is a bug fix release.

Minor bug fixed:

* r3775: fixed _compute_public_path() when using a query string
* r3754: updated Propel to 1.2.1 (http://propel.phpdb.org/trac/query?status=closed&milestone=1.2.1&resolution=fixed&order=priority)
* r3746: fixed output escaping and _get_object_list() (#1593)
* r3699: fixed highlight_text() doesn't work with / (#1621)
* r3692: fixed i18n support for errors in sfRequest

Version 1.0.1
-------------

This is a bug fix release.

Major bugs fixed:

* r3624: fixed security.yml case sensitivity

Minor bug fixed:

* r3599: fixed sfYaml::load() not returning correct values
* r3598: removed unneeded usage of JavaScript helpers in the web debug toolbar
* r3597: fixed sfConsoleRequest::initialize() signature
* r3541: fixed typo in the cache classes when logging

Version 1.0.0
-------------

No major changes since 1.0.0-rc2.

* r3502: fixed sfFilter::isFirstCall() method
* r3493: removed the DATABASE_NAME constants

* fixed typos in the book

Version 1.0.0-rc2
-----------------

No major changes since 1.0.0-rc1.

* r3385: new propel-dump-data task
* r3377: fixed PEAR installation problem with PEAR 1.5

* new book is now bundled with symfony under the doc/ directory
* added some phpdoc comments

Version 1.0.0-rc1
-----------------

No major changes since beta4.

* r3348: added "The Definitive guide to symfony"
* r3325: better inheritance for admin generator templates
* r3316: updated script.aculo.us to 1.7.0 and prototype to 1.5.0
* r3313: added a new decorate_with() helper
* r3312: added a new isForwardedTo() method to sfTestBrowser
* r3298: fixed tests on windows

* updated phpdoc comments
* added more unit tests (> 3800 now)

Version 1.0.0-beta4
-------------------

Major changes since beta3:

* r3288, r3291, r3293, r3294: better date/time handling in admin generator
* r3285: removed sfContext initialization when initializing symfony
* r3277: added SSL support to sfBrowser